syntax = "proto3";

// well known types
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "GrpcChatSample.Common";

package GrpcChatSample.Common;

service Chat {
  rpc Write(ChatLog) returns (ChatLogT) {}
  rpc Login(LoginObject) returns (LoginResult) {}
  rpc Subscribe(google.protobuf.Empty) returns (stream ChatLog) {}
}

message ChatLog {
	string name = 1;
	string content = 2;
	google.protobuf.Timestamp at = 3;
}

message ChatLogT {
	string name = 1;
}


message LoginObject {
	string name = 1;
	string password = 2;
}


message LoginResult {
	bool isAuth = 1;
	string error = 2;
}